[gd_scene load_steps=8 format=3 uid="uid://c6pcfaal5eln3"]

[ext_resource type="Script" uid="uid://dbvarnbdbccwn" path="res://scripts/platform_delayed.gd" id="1_g8nt1"]
[ext_resource type="Texture2D" uid="uid://dlapce6a0nfa1" path="res://assets/brackey/sprites/platforms.png" id="2_flf7d"]

[sub_resource type="Animation" id="Animation_g8nt1"]
resource_name = "modulate"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_flf7d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i026t"]
_data = {
&"RESET": SubResource("Animation_flf7d"),
&"modulate": SubResource("Animation_g8nt1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62q8x"]
size = Vector2(30, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aucmg"]
size = Vector2(20, 5)

[node name="PlatformDelayed" type="AnimatableBody2D" groups=["PlatformDelayed"]]
script = ExtResource("1_g8nt1")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_flf7d")
region_enabled = true
region_rect = Rect2(17, 49, 30, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_i026t")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_62q8x")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -9)
shape = SubResource("RectangleShape2D_aucmg")

[node name="TimerOnceTouched" type="Timer" parent="."]

[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TimerOnceTouched" to="." method="_on_timer_once_touched_timeout"]
